tests/expectations/compiler/async_blocks/future_in_composite_fail.out
Error [ETYC0372114]: A struct cannot contain a future.
    --> compiler-test:6:9
     |
   6 |         member: Future,
     |         ^^^^^^
Error [ETYC0372031]: A mapping's key cannot be a future
    --> compiler-test:3:5
     |
   3 |     mapping x: Future => Future;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372031]: A mapping's value cannot be a future
    --> compiler-test:3:5
     |
   3 |     mapping x: Future => Future;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372115]: An array cannot have a future as an element type.
    --> compiler-test:13:9
     |
  13 |         let an_array: [Future; 1] = [future];
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
